--- a/literaturedao/src/main/res/layout/fragment_literature_add.xml
+++ b/literaturedao/src/main/res/layout/fragment_literature_add.xml
@@ -100,99 +100,28 @@
                     android:textColor="#000000"
                     android:textSize="34sp" />
 
-                <LinearLayout
-                    android:id="@+id/add_literature_content"
+                <SearchView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="20dp"
                     android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:padding="20dp"
-                    android:visibility="visible">
+                    android:background="#F5F9FC"
+                    android:queryHint="Title, Author, Keywords ..."
+                    android:iconifiedByDefault="false"
+                    >
 
-                    <TextView
-                        android:id="@+id/selected_literature"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="No file selected...." />
+                </SearchView>
 
-                    <Button
-                        android:id="@+id/select_new_lirterature"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Select Literature" />
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_weight="1"
-                        android:paddingLeft="20dp"
-                        android:text="Title"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/literature_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName|textEmailAddress"
-                        android:text="Title of literature " />
-
-                    <Button
-                        android:id="@+id/submit_new_lirterature"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:backgroundTint="#FBCB5E"
-                        android:fontFamily="@font/cheltenhamstd_bold"
-                        android:text="Upload" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/add_literature_loading"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:visibility="gone">
-
-                    <ProgressBar
-                        android:id="@+id/progressBar"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="20dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/add_literature_done"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:padding="20dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:paddingBottom="10dp"
-                        android:text="Successfully added Literature!"
-                        android:textAlignment="center"
-                        android:textColor="#4CAF50"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
+                    android:backgroundTint="#FBCB5E"
+                    android:fontFamily="@font/cheltenhamstd_bold"
+                    android:text="Upload" />
 
             </LinearLayout>
 
