some progress was made

--- a/literaturedao/src/main/res/layout/item_custom_row.xml
+++ b/literaturedao/src/main/res/layout/item_custom_row.xml
@@ -22,15 +22,9 @@
             android:orientation="horizontal"
             tools:ignore="UseCompoundDrawables">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_launcher" />
-
             <TextView
                 android:id="@+id/tv_item_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:textColor="@android:color/black"
