--- a/literaturedao/src/main/res/navigation/nav_literaturedao.xml
+++ b/literaturedao/src/main/res/navigation/nav_literaturedao.xml
@@ -4,14 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/MyLiteratureFragment">
+
+    <fragment
+        android:id="@+id/MyLiteratureFragment"
+        android:name="nl.tudelft.trustchain.literaturedao.MyLiteratureFragment"
+        android:label="My literature"
+        tools:layout="@layout/fragment_my_literature" />
+
+    <fragment
+        android:id="@+id/AddLiteratureFragment"
+        android:name="nl.tudelft.trustchain.literaturedao.AddLiteratureFragment"
+        android:label="Add literature"
+        tools:layout="@layout/fragment_literature_add" />
+
+
+
+</navigation>
+
+
+<!--
     <fragment
         android:id="@+id/MyLiteratureFragment"
         android:name="nl.tudelft.trustchain.literaturedao.ui.MyLiteratureFragment"
         android:label="My Literature"
-        tools:layout="@layout/fragment_literature_add" />
+        tools:layout="@layout/fragment_literature_overview" >
+        <action
+            android:id="@+id/action_MyLiteratureFragment_to_LibraryFragment"
+            app:destination="@id/LibraryFragment" />
+        <action
+            android:id="@+id/action_MyLiteratureFragment_to_AddLiteratureFragment"
+            app:destination="@id/AddLiteratureFragment" />
+    </fragment>
     <fragment
         android:id="@+id/LibraryFragment"
         android:name="nl.tudelft.trustchain.literaturedao.ui.LibraryFragment"
         android:label="Remote Search"
-        tools:layout="@layout/fragment_library" />
-</navigation>
+        tools:layout="@layout/fragment_library" >
+        <action
+            android:id="@+id/action_LibraryFragment_to_MyLiteratureFragment"
+            app:destination="@id/MyLiteratureFragment" />
+    </fragment>
+
+-->
