--- a/literaturedao/src/main/res/layout/fragment_my_literature.xml
+++ b/literaturedao/src/main/res/layout/fragment_my_literature.xml
@@ -122,10 +122,9 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/upload_new_literatuteBtn"
                     android:layout_width="141dp"
                     android:layout_height="wrap_content"
-                    android:onClick="filePicker"
                     android:text="Select File" />
 
 
