--- a/literaturedao/src/main/res/layout/fragment_my_literature.xml
+++ b/literaturedao/src/main/res/layout/fragment_my_literature.xml
@@ -132,6 +132,7 @@
                     android:id="@+id/recycler_view_items"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
