--- a/literaturedao/src/main/res/layout/fragment_literature.xml
+++ b/literaturedao/src/main/res/layout/fragment_literature.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
 
 
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#FEFCF7">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/ic_literaturebg"
         android:orientation="vertical"
         android:padding="20dp">
@@ -31,21 +32,20 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/cheltenhamstd_bold"
-            android:text="Authors"
+            android:text="keywords"
             android:textColor="#000000"
             android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/keywords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cheltenhamstd_book"
-            android:text="Donec laoreet, sem consequat"
             android:textColor="#000000"
             android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
