--- a/literaturedao/src/main/res/layout/fragment_literature.xml
+++ b/literaturedao/src/main/res/layout/fragment_literature.xml
@@ -6,7 +6,8 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FEFCF7">
+    android:background="#FEFCF7"
+    android:padding="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cheltenhamstd_book"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mollis fringilla enim. "
+            android:text="Lorem ipsum dolor sit amet, consectetur"
             android:textColor="#000000"
             android:textSize="20sp" />
 
