--- a/literaturedao/src/main/res/layout/fragment_literature.xml
+++ b/literaturedao/src/main/res/layout/fragment_literature.xml
@@ -10,10 +10,12 @@
     android:padding="2dp">
 
     <LinearLayout
+        android:id="@+id/lit_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@drawable/ic_literaturebg"
+        android:clickable="true"
         android:orientation="vertical"
         android:padding="20dp">
 
