Added the download logic and handling in the cortoutine
Still problems in the sub routines for torrent creation

--- a/literaturedao/src/main/res/layout/fragment_literature_add.xml
+++ b/literaturedao/src/main/res/layout/fragment_literature_add.xml
@@ -128,7 +128,7 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName|textEmailAddress"
-                        android:text="Title of literature " />
+                        android:text="Title_of_literature" />
 
                     <View
                         android:id="@+id/divider"
