--- a/literaturedao/src/main/res/menu/literature_navigation_menu.xml
+++ b/literaturedao/src/main/res/menu/literature_navigation_menu.xml
@@ -12,10 +12,14 @@
     android:title="Add Literature" />
 
     <item
+        android:id="@+id/RemoteSearchFragment"
+        android:icon="@drawable/ic_library"
+        android:title="Remote Search" />
+
+    <item
         android:id="@+id/ConnectionFragment"
         android:icon="@drawable/ic_myliterature"
         android:title="Connections" />
-
 
 
 
