--- a/literaturedao/src/main/res/layout/fragment_remote_search.xml
+++ b/literaturedao/src/main/res/layout/fragment_remote_search.xml
@@ -79,12 +79,13 @@
                 android:id="@+id/imageView6"
                 android:layout_width="89dp"
                 android:layout_height="88dp"
-                android:layout_gravity="bottom|center"
+                android:layout_gravity="top|center"
                 app:srcCompat="@drawable/ic_search_literature_illustration" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="60dp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -114,6 +115,22 @@
 
                 </SearchView>
 
+                <LinearLayout
+                    android:id="@+id/remote_search_loading"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="20dp" />
+                </LinearLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/remote_search_results"
                     android:layout_width="match_parent"
@@ -130,68 +147,5 @@
         </FrameLayout>
 
     </androidx.core.widget.NestedScrollView>
-
-<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom"-->
-<!--        android:background="#FFFFFF"-->
-<!--        android:padding="10dp">-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:gravity="center"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginRight="20dp"-->
-<!--                android:orientation="vertical">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/imageView"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:paddingBottom="5dp"-->
-<!--                    app:srcCompat="@drawable/ic_myliterature" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/textView3"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="@font/cheltenhamstd_bold"-->
-<!--                    android:text="My Literature"-->
-<!--                    android:textColor="#000000" />-->
-
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:orientation="vertical">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/imageView4"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:paddingBottom="5dp"-->
-<!--                    app:srcCompat="@drawable/ic_library" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/nav_library"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="@font/cheltenhamstd_bold"-->
-<!--                    android:text="Library"-->
-<!--                    android:textColor="#000000" />-->
-<!--            </LinearLayout>-->
-
-<!--        </LinearLayout>-->
-
-<!--    </com.google.android.material.bottomnavigation.BottomNavigationView>-->
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
