add connections part

--- a/literaturedao/src/main/res/menu/literature_navigation_menu.xml
+++ b/literaturedao/src/main/res/menu/literature_navigation_menu.xml
@@ -7,9 +7,16 @@
         android:icon="@drawable/ic_myliterature"
         android:title="My Literature" />
     <item
-        android:id="@+id/AddLiteratureFragment"
+    android:id="@+id/AddLiteratureFragment"
+    android:icon="@drawable/ic_myliterature"
+    android:title="Add Literature" />
+
+    <item
+        android:id="@+id/ConnectionFragment"
         android:icon="@drawable/ic_myliterature"
-        android:title="Add Literature" />
+        android:title="Connections" />
+
+
 
 
 </menu>
