--- a/literaturedao/src/main/res/menu/literature_navigation_menu.xml
+++ b/literaturedao/src/main/res/menu/literature_navigation_menu.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    >
 
     <item
         android:id="@+id/MyLiteratureFragment"
         android:icon="@drawable/ic_myliterature"
         android:title="My Literature" />
+
     <item
     android:id="@+id/AddLiteratureFragment"
     android:icon="@drawable/ic_myliterature"
@@ -18,7 +21,7 @@
 
     <item
         android:id="@+id/ConnectionFragment"
-        android:icon="@drawable/ic_myliterature"
+        android:icon="@drawable/ic_connections_icon"
         android:title="Connections" />
 
 
