--- a/literaturedao/src/main/res/layout/fragment_connection.xml
+++ b/literaturedao/src/main/res/layout/fragment_connection.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FEFCF7"
     tools:context=".ConnectionFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -82,12 +83,23 @@
                 android:orientation="vertical">
 
 
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="200dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:src="@drawable/ic_undraw_connection_re_lcud" />
+
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/cheltenhamstd_bold"
+                    android:gravity="center"
                     android:padding="20dp"
                     android:text=" Peers"
+                    android:textColor="#000000"
                     android:textSize="24sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
