Make the whole searchbar in localsearch clickable

--- a/literaturedao/src/main/res/layout/fragment_my_literature.xml
+++ b/literaturedao/src/main/res/layout/fragment_my_literature.xml
@@ -108,7 +108,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:background="#F5F9FC" />
+                            android:background="#F5F9FC"
+                            android:queryHint="Title, Author, Keywords, ..."
+                            android:iconifiedByDefault="false"
+                            />
 
                     </LinearLayout>
 
