--- a/data-vault/src/main/res/layout/browser_grid_item.xml
+++ b/data-vault/src/main/res/layout/browser_grid_item.xml
@@ -3,6 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
